unpackaged/main/default/objects/Uplift_Rate__c/Uplift_Rate__c.object-meta.xml
<CustomObject>
    <label>Taux d&#39;indexation</label>
    <nameField>
        <label>Indice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taux d&#39;indexation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>