unpackaged/main/default/objects/Uplift_Rate__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Valeur de l&#39;Indice</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>