unpackaged/main/default/objects/Uplift_Rate__c/fields/Index_Period__c.field-meta.xml
<CustomField>
    <fullName>Index_Period__c</fullName>
    <label>Periode d&#39;indexation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M4</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>M7</fullName>
            </value>
            <value>
                <fullName>M8</fullName>
            </value>
            <value>
                <fullName>M9</fullName>
            </value>
            <value>
                <fullName>M10</fullName>
            </value>
            <value>
                <fullName>M11</fullName>
            </value>
            <value>
                <fullName>M12</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>