unpackaged/main/default/objects/Uplift_Rate__c/fields/Index_Year__c.field-meta.xml
<CustomField>
    <fullName>Index_Year__c</fullName>
    <label>Année de l&#39;indice</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>