unpackaged/main/default/objects/Uplift_Rate__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Taux d&#39;indexation</relationshipLabel>
    <relationshipName>Taux_d_indexation</relationshipName>
    <type>Lookup</type>
</CustomField>