unpackaged/main/default/objects/Uplift_Rate__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité Légale</label>
    <referenceTo>LegalEntity__c</referenceTo>
    <relationshipLabel>Taux d&#39;indexation</relationshipLabel>
    <relationshipName>Taux_indexation</relationshipName>
    <type>Lookup</type>
</CustomField>