unpackaged/main/default/objects/Uplift_Rate__c/fields/TECH_Period_Date__c.field-meta.xml
<CustomField>
    <fullName>TECH_Period_Date__c</fullName>
    <formula>IF( MID( TEXT(Index_Period__c) , 0 , 1) == &#39;M&#39;,
    DATE( Index_Year__c ,  VALUE(MID( TEXT(Index_Period__c) , 2 , LEN(TEXT(Index_Period__c)) -1)) , 1),
     IF( TEXT(Index_Period__c) == &#39;T1&#39; , 
       DATE( Index_Year__c ,  1  , 1),
          IF( TEXT(Index_Period__c) == &#39;T2&#39; , 
            DATE( Index_Year__c , 5  , 1),
              IF( TEXT(Index_Period__c) == &#39;T3&#39; , 
                 DATE( Index_Year__c , 9  , 1),
                 DATE( Index_Year__c , 1  , 1)
               )
           )
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH - Period Date</label>
    <type>Date</type>
</CustomField>